--- a/CV/Sposito_CV.Rmd
+++ b/CV/Sposito_CV.Rmd
@@ -48,31 +48,28 @@ tribble(~ Degree, ~ Year, ~ Institution, ~ Where, ~ Why,
   detailed_entries(Institution, Year, Degree, Where, Why, .protect = FALSE)
 ```
 
-# Research Experience
+# Selected Employment History
 
 ```{r}
+# tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
+#         "Research Assistant",
+#         "Sep 2020 - Present","Centre for International Environmental Studies", "Geneva, Switzerland",
+#         "Assist with the theoretical, methodological, and empirical developments in data and analysis for across various domains of global governance in the 'PANARCHIC: Power and Networks and the Rate of Change in Institutional Complexes' project funded by the Swiss National Science Foundation
+#         \\item Help with the development data infrastructure and statistical methods in R, offered as an emsemble of R packages, for the gathering, consolidating, and analyzing global governance data
+#         \\item Train and manage research assistants to work with data colletion, R package development, GitHub branching, website design, and among other programmatic issues related to the project") %>%
+#   detailed_entries(With, When, What, Where, Why, .protect = FALSE)
+#long version (Selected Employment History)
 tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
         "Research Assistant",
         "Sep 2020 - Present","Centre for International Environmental Studies", "Geneva, Switzerland",
         "Assist with the theoretical, methodological, and empirical developments in data and analysis for across various domains of global governance in the 'PANARCHIC: Power and Networks and the Rate of Change in Institutional Complexes' project funded by the Swiss National Science Foundation
         \\item Help with the development data infrastructure and statistical methods in R, offered as an emsemble of R packages, for the gathering, consolidating, and analyzing global governance data
-        \\item Train and manage research assistants to work with data colletion, R package development, GitHub branching, website design, and among other programmatic issues related to the project") %>%
-  detailed_entries(With, When, What, Where, Why, .protect = FALSE)
-# #long version (Selected Employment History)
-# tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
-#         "Research Assistant", "Sep 2020 - Present", "Centre for International Environmental Studies", "Geneva, Switzerland",
-#         "Assist with the theoretical, methodological, and empirical developments in data and analysis for across various domains of global governance in the 'PANARCHIC: Power and Networks and the Rate of Change in Institutional Complexes' project funded by the Swiss National Science Foundation
-#         \\begin{itemize}
-#         \\item Help develop data infrastructure and statistical methods in R, offered as an emsemble of R packages, for the gathering, consolidation, and analysis of global governance data.
-#         \\item Train and manage other research assistants to work with data colletion, R programming, package development, GitHub branching, and other theoretical and practical issues related to the project.
-#         \\end{itemize}",
-#         "Football Head Coach", "May 2018 - Aug 2020", "Intersoccer", "Geneva, Switzerland",
-#         "Ensured a safe and constructive environment for participants, coaches, and parents while promoting the benefits of sports
-#         \\begin{itemize}
-#         \\item Supervised coaches and participants throughout activities to ensure their safety.
-#         \\item Communicated with coaches, children, and parents to cordinate and solve logistical issues related to transportation, venue organization, and delivery of supplies, as well as any medical emergencies and other unexpected events that arose.
-#         \\end{itemize}") %>%
-#   detailed_entries(What, When, With, Where, Why, .protect = FALSE)
+        \\item Train and manage research assistants to work with data colletion, R package development, GitHub branching, website design, and among other programmatic issues related to the project",
+        "Football Head Coach", "May 2018 - Aug 2020", "Intersoccer", "Geneva, Switzerland",
+        "Ensured a safe and constructive environment for participants, coaches, and parents while promoting the benefits of sports
+        \\item Supervised coaches and participants throughout activities to ensure their safety
+        \\item Communicated with coaches, children, and parents to cordinate and solve logistical issues related to transportation, venue organization, and delivery of supplies, as well as any medical emergencies and other unexpected events that arose") %>%
+  detailed_entries(What, When, With, Where, Why, .protect = FALSE)
 ```
 
 # Publications and Working Papers
@@ -81,7 +78,7 @@ tribble(~ What, ~ When, ~ With, ~ Where, ~ Why,
 tribble(~ Title, ~ Published, ~ Journal, ~ When,
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)}",
   "\\href{https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639}{DOI: 10.1080/09644016.2023.2220639}", "Environmental Politics", "June 2023",
-  "Radiating Truthiness: Authenticity performances in politics in Brazil and the United States", "Minor Revisions in Political Studies", "", "",
+  "Radiating Truthiness: Authenticity performances in politics in Brazil and the United States", "Conditionally Accepted in Political Studies", "", "",
   "Promises Promises: An introduction to urgency analyzis (with Jael Tan and James Hollway)",
   "Working Paper", "", "",
   "Managing imprecise dates in R with messydates (with James Hollway)",
@@ -171,6 +168,9 @@ tribble(~ Name, ~ Purpose, ~ Status,
         "\\href{https://snlab-ch.github.io/migraph/}{migraph}",
         "\\href{https://snlab-ch.github.io/migraph/}{An R package with tools for multimodal and multilevel network analysis}", 
         "Contributor",
+        "\\href{https://github.com/henriquesposito/poldis}{poldis}",
+        "\\href{https://github.com/henriquesposito/poldis}{An R package with tools for analyzing political discourses over time}", 
+        "Author",
         "\\href{https://globalgov.github.io/manypkgs/}{manypkgs}",
         "\\href{https://globalgov.github.io/manypkgs/}{An R package to support the creation of new many packages}",
         "Contributor",
@@ -179,20 +179,18 @@ tribble(~ Name, ~ Purpose, ~ Status,
         "Contributor",
         "\\href{https://globalgov.github.io/manystates/}{manystates}",
         "\\href{https://globalgov.github.io/manystates/}{An R data package on sovereign states}",
-        "Contributor",
-        "\\href{https://github.com/henriquesposito/poldis}{poldis}",
-        "\\href{https://github.com/henriquesposito/poldis}{An R package with tools for analyzing political discourses over time}", 
-        "Author") %>%
+        "Contributor") %>%
   detailed_entries(what = Purpose, with = Name, where = Status,
                    .protect = FALSE)
 ```
 
 # Awards and Honors
 
+- [Best Paper in Amazonian Studies at the Latin American Studies Association for "Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985" published in Environmental Politics](https://lasaweb.org/en/2024-section-awards/)
 - UAB Presidential Honors List 2013, 2015, 2016 and 2017
+- Conference USA Commissioner's Honor Roll 2013 – 2016
 - Conference USA Academic Honor Medal 2015
 - National Soccer Coaches Association of America NCAA Scholar All-South Region Team 2016
-- Conference USA Commissioner's Honor Roll 2013 – 2016
 - Conference USA All-Academic Team 2016
 - College Sports Information Directors of America Academic All-District Team 2016
 
