--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ $$\\[0.1cm]$$
 
 $$\\[0.1cm]$$
 
-<p class="text-center">*Check out my new research article on [Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)](https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639)*</p>
+<p class="text-center">*If you are interested in environmental politics, the Amazon rainforest, or Brazilian political discourses, please check the research article on [Which Amazon Problem? Problem-constructions and Transnationalism in Brazilian Presidential Discourse since 1985 (with Livio Silva-Muller)](https://www.tandfonline.com/doi/full/10.1080/09644016.2023.2220639)*</p>
 
 $$\\[0.1cm]$$
 
